#find_package( OpenCV REQUIRED )
#include_directories( ${OpenCV_INCLUDE_DIRS} )
#ADD_EXECUTABLE(AVProcApp ${DGW_AVPROCAPP_SRCS})
#TARGET_LINK_LIBRARIES(AVProcApp DGwClientAVproc curl_helper time_funcs ${OpenCV_LIBS})

SET(DGW_SENSORSTODB_SRCS
sensorsToDB.cpp)

ADD_EXECUTABLE(sensorsToDB ${DGW_SENSORSTODB_SRCS})
TARGET_LINK_LIBRARIES(sensorsToDB DGwClientSensors curl_helper time_funcs)

SET(LIB_DGWCLIENTAV_SRCS
libDGwClientAV.cpp)

ADD_LIBRARY(libDGwClientAV STATIC ${LIB_DGWCLIENTAV_SRCS})
TARGET_LINK_LIBRARIES(libDGwClientAV DGwClient)

SET(LIB_DGWCLIENTAV2_SRCS
libDGwClientAV2.cpp)

ADD_LIBRARY(libDGwClientAV2 STATIC ${LIB_DGWCLIENTAV2_SRCS})
TARGET_LINK_LIBRARIES(libDGwClientAV2 DGwClient)

SET(LIB_DGWCLIENT_SRCS
libDGwClient.cpp)

ADD_LIBRARY(DGwClient STATIC ${LIB_DGWCLIENT_SRCS})
TARGET_LINK_LIBRARIES(DGwClient DGwSockets json_spirit_dgw)

SET(LIB_DGWACCELEROMETER_SRCS
libDGwClientSensors.cpp)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/libDGwSockets ${CMAKE_SOURCE_DIR}/libDGwClient)

ADD_LIBRARY(DGwClientSensors STATIC ${LIB_DGWACCELEROMETER_SRCS})
TARGET_LINK_LIBRARIES(DGwClientSensors DGwClient curl)

